layout fixes on mobile

--- a/style.css
+++ b/style.css
@@ -328,8 +328,9 @@ main {
     }
 
     .info h1 {
-        font-size: 30px;
-        line-height: 36px;
+        font-size: 34px;
+        line-height: 40px;
+        margin-bottom: 60px;
     }
 
     .info h2 {
